Fixed icons in dark mode, cleanup.

--- a/css/dashboards.css
+++ b/css/dashboards.css
@@ -101,6 +101,10 @@
     .highcharts-dashboards-edit-sidebar-title {
         filter: brightness(0) invert(1);
     }
+
+    .highcharts-dashboards-edit-menu .highcharts-dashboards-edit-toolbar-item div {
+        filter: brightness(0) invert(1);
+    }
 }
 
 .highcharts-dark {
